# newagentic

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
agents/: demo.yaml
app/api/: main.py  sse_schema.py
app/factory/: schema.py  yaml_loader.py
app/internal/: config.py  logging.py  shutdown.py
app/storage/: init.py  sqlite.py  templates.py
app/storage/migrations/: 0001_init.sql
app/tools/: context.py
deploy/: Dockerfile  docker-compose.yml
docs/: 00-architecture.md  01-phases.md  02-todolist.md  03-validation.md  04-review-notes.md  05-codex-handoff.md
docs/adr/: 0001-platform-first-route.md  0002-six-strong-constraints.md  0003-python-sqlite-stack.md  README.md
tests/: conftest.py
tests/integration/: test_healthz.py
